--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<p>Тут есть пара небольших различий в файле конфигурации, но в вашем случае эту разницу можно считать несущественной.</p>
 		<p>Можно считать, что в этом случае берётся собственно Git-репозиторий без рабочего каталога и создаётся каталог только для него.</p>
 		<p>Теперь, когда у вас есть голая копия репозитория, всё, что вам нужно сделать, это поместить её на сервер и настроить протоколы.</p>
+		<p>первый коммиит. второое измененение</p>	
 		<img src="demo_256x192_01.jpg">
 </body>
 </html>		
